@@ -8,6 +8,7 @@
 - Include dumb wrappers to provide names suffixed with _64 on 64 bit machines and _32 on 32 bit machines, respectively, to help clients that insist on defining _FILE_OFFSET_BITS where it is not needed (or with a non-large value).
 - Tuning of the internal buffer code for feeder mode to minimize its performance impact (works in 4K blocks now).
 - Workaround for compiler bugs in Open64/PathScale/SunStudio (bug 3004396, suggestion by Doug Gilmore).
+- Fix handle I/O for clients with small file offset (32 bit when libmpg123 has 64 bit).
 
 1.12.1
 ---
